--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <html lang="pt-BR">
+
 <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
     <title>Aluraflix</title>
 </head>
 
 <body>
     <header>ALURAFLIX</header>
 
-    <section>
+    <section class="chamada">
         <div class="chamada-texto">
-            <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
+            <h1>ATRAVÉS DO ARANHAVERSO</h1>
             <p>#homem-aranha</p>
         </div>
 
@@ -19,8 +25,27 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-    </section> 
-    <section></section>
+    </section>
+    <section class="categoria">
+        <h2>filmes e séries</h2>
+        <div> class="categorias-videos"
+            <a href="https://www.youtube.com/watch?v=dAdTQzckRjY">
+                <img src="https://img.youtube.com/vi/dAdTQzckRjY/maxresdefault.jpg" alt="">
+            </a>
+            <a href="https://www.youtube.com/watch?v=oLnS1Ij9-Kk">
+                <img src="https://img.youtube.com/vi/oLnS1Ij9-Kk/maxresdefault.jpg" alt="">
+            </a>dAdTQz
+            <a href="https://www.youtube.com/watch?v=18qDST2_Nh8">
+                <img src="https://img.youtube.com/vi/18qDST2_Nh8/maxresdefault.jpg" alt="">
+            </a>
+            <a href="https://www.youtube.com/watch?v=IpSDW3Mq-7E">
+                <img src="https://img.youtube.com/vi/IpSDW3Mq-7E/maxresdefault.jpg" alt="">
+            </a>
+            <a href="https://www.youtube.com/watch?v=Pl5pqEf4jeQ">
+                <img src="https://img.youtube.com/vi/Pl5pqEf4jeQ/maxresdefault.jpg" alt="">
+            </a>
+        </div>
+    </section>
 
 </body>
 
