--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
     <section class="categoria">
         <h2>filmes e séries</h2>
-        <div> class="categorias-videos"
+        <div class="categorias-videos"> 
             <a href="https://www.youtube.com/watch?v=dAdTQzckRjY">
                 <img src="https://img.youtube.com/vi/dAdTQzckRjY/maxresdefault.jpg" alt="">
             </a>
