--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>Aluraflix</title>
+    <title>ALURAFLIX</title>
 </head>
 
 <body>
@@ -26,9 +26,10 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
+
     <section class="categoria">
-        <h2>filmes e séries</h2>
-        <div class="categorias-videos"> 
+        <h2>Filmes e séries</h2>
+        <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=dAdTQzckRjY">
                 <img src="https://img.youtube.com/vi/dAdTQzckRjY/maxresdefault.jpg" alt="">
             </a>
